<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Domi01HW</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world2">Hello world2222!</string>
    <string name="button1_text">Write</string>
    <string name="textview2_text">Ide fog kiirni szöveget a Write gomb</string>
    <string name="button2_text">Clear</string>
    <string name="button3_text">Send Message</string>
    <string name="title_activity_display_message">My Message (DJ)</string>
    <string name="dj_message">DJ Message</string>
    
</resources>